[package]
name = "repo"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.0"
bitvec = {version = "1.0.1", features=["atomic", "serde"]}
eframe = "0.33.3"
hashbrown = "0.17.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
osmpbf = "0.3.8"
priority-queue = "2.7.0"
rand = "0.10.0"
rayon = "1.11.0"
serde = {version = "1.0.228", features= ["derive"]}
